--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -11,7 +11,7 @@
   		<a href="#home">Home</a>
   		<a href="#news">Timetable</a>
   	<div class="dropdown">
-    		<button class="dropbtn">Dropdown &#8910; 
+    		<button class="dropbtn">Dropdown 
     		</button>
     <div class="dropdown-content">
       <a href="#">Tickets</a>
