--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="block">
-		<div class="text">Scroll and scroll</div>
+		<div class="text">Scroll and scroll...</div>
 	</div>
 
 	 <div class="parallax" id="img2">
