--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -14,10 +14,11 @@
     <h1>Do you believe in magic?</h1>
     
     <div class="button-position">
-	<button onclick="randomBackgroundColor()">
+	<button id="button-size" onclick="countIt()">
 		Click on me!
 	</button>
     </div>
-    
+
+	
 </body>
 </html>
